--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,18 @@ num-traits = "0.2"
 sprs = { git = "https://github.com/sparsemat/sprs", rev = "9875143" }
 num-complex = "0.4"
 approx = "0.5"
+rayon = "1.5"
 
 amd = "0.2"
-rlu = "0.2"
+rlu = "0.3.1"
 
 [dev-dependencies]
 criterion = "0.4"
 
 [[bench]]
-name = "amd_benchmark"
+name = "order_benchmark"
+harness = false
+
+[[bench]]
+name = "par_solve_benchmark"
 harness = false
