--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ amd = "0.2"
 rlu = { version = "=0.4.2", features = ["rayon"] }
 #rlu = { path = "../rlu", features = ["rayon"] }
 
+klu_sys = "0.2"
+
 cpuprofiler = "0.0.4"
 
 [dev-dependencies]
