--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 num-traits = "0.2"
-#sprs = "0.11"
+# TODO: Replace with version 0.12 (read complex MatrixMarket support)
 sprs = { git = "https://github.com/sparsemat/sprs", rev = "9875143" }
 num-complex = "0.4"
 approx = "0.5"
@@ -13,7 +13,6 @@ rayon = "1.5"
 
 amd = "0.2"
 rlu = { version = "=0.4.2", features = ["rayon"] }
-#rlu = { path = "../rlu", features = ["rayon"] }
 
 klu_sys = "0.2"
 
@@ -24,6 +23,10 @@ criterion = "0.4"
 
 [[bench]]
 name = "order_benchmark"
+harness = false
+
+[[bench]]
+name = "factor_benchmark"
 harness = false
 
 [[bench]]
